--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,20 @@
 * {
   box-sizing: border-box;
-  border: 1px solid red!important;
+  font-family: 'Poppins', sans-serif;
   padding: 0;
   margin:  0;
 }
 
-a:hover {
-    cursor: pointer;
+body {
+  font-family: 'Poppins', sans-serif;
 }
 
-header {
-  min-height: 6.2375rem;
+a {
+  text-decoration: none;
+  color: inherit;
+}
+a:hover {
+  cursor: pointer;
 }
 
 .nav-bar{
@@ -18,10 +22,21 @@ header {
   display: flex;
   flex-direction: row;
   width: 100%;
-  justify-content: space-around;
+  gap: 30px;
   align-items: center;
-  margin-top: 1em;
+  justify-content: space-around;
+  margin-top: 0;
 }
+
+.nav-bar h2 {
+  font-weight: 600;
+}
+
+ .nav-bar p {
+  margin: 0.3rem auto;
+  font-style: italic;
+  padding: 0;
+ }
 
 .nav-bar div {
   color: white;
@@ -29,24 +44,26 @@ header {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  text-align: center;
+  padding-top: 1.5em;
+  min-height: 160px;
 }
 
 .menu-icon:hover {
-    color: black;
-    cursor: pointer;
+  color: black;
+  cursor: pointer;
 }
 
-.nav-bar img{
-    max-height: 50px;
+.nav-bar img {
+  max-height: 50px;
 }
 
-#logo{
-  background-color: blue;
-  max-height: 150px;
+#logo {
+  margin-top: 0;
 }
 
 .menu-icon{
-  box-sizing: border-box;
+  width: 14%;
 }
 
 .top {
@@ -57,32 +74,73 @@ header {
 }
 
 main h1 {
-  margin-left: 50%;
   position: absolute;
+  margin-left: 50%;
+  padding-bottom: 1rem;
 }
 
 .latest {
-    border: 1px solid red;
-    width: 50%;
-    min-height: 50%;
-    align-items: center;
-    justify-content: center;
+  display: grid;
+  color: white;
+  grid-template-areas:
+    "latop"
+    "labottom";
+  border: 1px solid black;
+  font-size: 2rem;
+  width: 50%;
+  min-height: 50%;
+  align-items: center;
+  justify-content: center;
+  margin-top: 0rem;
+}
+
+.latop {
+  display: inline-block;
+  grid-area: latop;
+  height: 20%;
+  width: 60%;
+  margin: 2rem auto;
+}
+
+.wrote {
+  display: inline-block;
+  font-style: italic;
+  width: 20%;
+}
+
+.labottom {
+  grid-area: labottom;
+  margin: -5rem auto 0 auto;
+  text-align: center;
 }
 
 .middle {
   display: flex;
   flex-wrap: wrap;
-  max-width: 55%;
+  max-width: 95%;
   margin: 0 auto;
   min-height: 200px;
   justify-items: space-around;
+  border-radius: 5px;
 }
 
 .middlediv {
-  display: flex;
+  display: grid;
   min-height: 250px;
   align-items: top;
-  max-width: 24%;
+  border: 2px solid white;
+  justify-content: space-around;
+  width: 23%;
+  margin: 10px;
+  border-radius: 3px;
+  padding: 5px;
+  line-height: 2em;
+}
+
+.middleauthor {
+  height: 60%;
+  margin-top: -2em;
+  text-decoration: none;
 }
 
 .break {
@@ -90,47 +148,94 @@ main h1 {
   width: 0;
 }
 
-#smashing {
-  max-width: 48%;
+.smashing {
+  max-width: 46%;
+  margin: 10px;
+  padding: 5px;
+  border: 2px solid white;
+  line-height: 2em;
+  border-radius: 3px;
 }
 
 .seelatest {
-  border: 1px solid red;
-  width: 50%;
+  width: 100%;
   max-height: 30px;
-  margin: 0 auto;
+  margin: 5px auto 0 auto;
   text-align: center;
+}
+
+#moretwitter {
+  margin: 10px auto;
 }
 
 .ethicalhandbook {
   width: 100%;
-  min-height: 100px;
+  min-height: 200px;
+  text-align: center;
+  line-height: 2em;
+  margin: 1em auto;
+}
+
+.ethicalhandbook button {
+  margin: 1em auto;
+  width: 20%;
+}
+
+.ethicalhandbook div {
+  width: 80%;
+  margin: auto;
 }
 
 .communitylinks {
-  display: flex;
-  width: 55%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  padding: 1em;
   margin: 0 auto;
+  justify-content: space-around;
+}
+
+.communitylinks .seelatest {
+  margin: 1em auto;
+  line-height: 7em;
+}
+
+.communitylinks div {
+  border: 1px solid gray;
+  border-radius: 3px;
+  width: 48%;
+  min-height: 150px;
+  margin: 0.07em auto;
+  line-height: 10em;
+  text-align: center;
 }
 
 .person_of_the_week {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
+  display: grid;
+  grid-template-areas:
+   "a b";
   font-size: calc(.35842vw + .95296em);
   min-height: 120px;
   width: 100%;
   margin: 0 auto;
+  justify-items: center;
+  text-align: center;
 }
 
-.person_of_the_week img {
+.person_of_the_week div:first-child {
   width: 20%;
   height: 100%;
-  float: left;
+  grid-area: a;
+  margin-left: -10rem;
 }
 
-.person_of_the_week div {
-  width: 70%;
+.person_of_the_week div:nth-child(2) {
+  grid-area: b;
+  width: 100%;
+  height: 100%;
+  line-height: 6rem;
+  margin-right: 30%;
+  align-items: center;
 }
 
 .communitylinks {
@@ -138,45 +243,140 @@ main h1 {
   flex-wrap: wrap;
 }
 
-.communitylinks div {
-  width: 50%;
+.featuredbook {
+  padding: 3rem 5rem;
+  text-align: center;
+  line-height: 1.5rem;
 }
 
-.featuredbook {
-    padding: 4rem 5rem;
-    text-align: start;
+.featuredbook button {
+  margin: 20px auto;
 }
 
 .curatedposts {
   display: grid;
+  line-height: 2em;
 }
 
 .posts {
   display: flex;
   flex-wrap: wrap;
   min-height: 200px;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .posts div {
-  color: #333;
-  font-size: 1.5rem;
+  font-size: 1.1rem;
   font-weight: 400;
   background-color: rgb(190, 188, 188);
-  width: 24.5%;
-  font-family: 'Poppins', sans-serif;
+  border: 1px solid rgb(184, 182, 182);
+  border-radius: 3px;
+  width: 23.5%;
 }
 
 .smashingNewsletter {
   display: grid;
+  border: 1px solid white;
   width: 90%;
-  min-height: 100px;
-  margin: 0 auto;
+  min-height: 250px;
+  margin: 10px auto;
   border-radius: 0.5em;
   text-align: center;
   justify-items: center;
+  align-items: center;
 }
 
 .smashingNewsletter div {
   width: 50%;
+}
+
+footer {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  justify-items: center;
+  min-height: 150px;
+}
+
+footer div:first-child {
+  margin-top: 3rem;
+}
+
+footer div {
+  width: 85%;
+  margin: 20px auto;
+  text-align: center;
+}
+
+footer ul {
+  display: flex;
+  flex-wrap: wrap;
+  width: 90%;
+  justify-content: center;
+  list-style-position: inside;
+  list-style-type: disc;
+  margin: 0 auto;
+}
+
+footer ul li {
+  list-style-position: inside;
+  margin: 2px;
+  padding: 0 5px;
+}
+
+.top >h1{
+  position: absolute;
+  width: 30%;
+  margin: 2rem auto 0 35%;
+  background-color: white;
+  text-align: center;
+  padding-top: 1rem;
+}
+
+.toptitle {
+  color: black;
+}
+.topics {
+  border-radius: 0.3rem;
+  border: 2px solid white;
+  padding: 0.5rem 1rem;
+  margin: 0 2em;
+  width: 9em;
+}
+
+#subscribe {
+  display: inline-block;
+  border-radius: 3px;
+}
+
+/*
+Color scale: Color 1 is the most striking one (visually), color 2 less so and so on in a descending order
+*/
+
+.color1 {
+  background-color: rgb(39, 39, 39);
+}
+
+.color2 {
+  background-color: rgb(63, 63, 63)
+}
+
+.color3 {
+  background-color: rgb(95, 94, 94)
+}
+
+.color4 {
+  background-color: rgb(126, 126, 126)
+}
+
+.color5 {
+  background-color: rgb(167, 167, 167);
+}
+
+.whiteb {
+  background-color: white;
+}
+
+.whitet {
+    color: white;
 }
