--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,7 @@ a:hover {
 
 #logo {
   margin-top: 0;
+  width: 15%;
 }
 
 .top {
@@ -111,7 +112,6 @@ main h1 {
 .middle {
   display: flex;
   flex-wrap: wrap;
-  max-width: 95%;
   margin: 0 auto;
   min-height: 200px;
   justify-items: space-around;
@@ -124,7 +124,7 @@ main h1 {
   align-items: top;
   border: 2px solid white;
   justify-content: space-around;
-  width: 23%;
+  width: 30%;
   margin: 10px;
   border-radius: 3px;
   padding: 5px;
@@ -143,9 +143,9 @@ main h1 {
 }
 
 .smashing {
-  max-width: 46%;
+  max-width: 61.5%;
   margin: 10px;
-  padding: 5px;
+  padding: 10px;
   border: 2px solid white;
   line-height: 2em;
   border-radius: 3px;
@@ -327,23 +327,31 @@ footer ul li {
   position: absolute;
   width: 30%;
   margin: 2rem auto 0 35%;
-  background-color: white;
   text-align: center;
   padding-top: 1rem;
 }
 
 .toptitle {
   color: black;
+  font-weight: 600;
+  font-family: 'Poppins', sans-serif;
+  padding: 1rem;
+  line-height: 2rem;
+  font-size: 1.1rem;
 }
 
 .topics {
   border-radius: 0.3rem;
   border: 2px solid white;
-  padding: 0.5rem 1rem;
+  font-weight: 600;
+  padding: 0.7rem 1rem;
   margin: 0 2em;
   width: 9em;
 }
 
+.Go {
+  margin: 5em auto 0 -11rem;
+}
 #subscribe {
   display: inline-block;
   border-radius: 3px;
