--- a/css/styles.css
+++ b/css/styles.css
@@ -362,25 +362,44 @@ Color scale: Color 1 is the most striking one (visually), color 2 less so and so
 */
 
 .color1 {
-  background-color: rgb(39, 39, 39);
+  background-color: rgb(30, 30, 30);
 }
 
 .color2 {
-  background-color: rgb(63, 63, 63);
+  background-color: rgb(45, 45, 45);
 }
 
 .color3 {
-  background-color: rgb(95, 94, 94);
+  background-color: rgb(60, 60, 60);
 }
 
 .color4 {
-  background-color: rgb(126, 126, 126);
+  background-color: rgb(75, 75, 75);
 }
 
 .color5 {
-  background-color: rgb(167, 167, 167);
+  background-color: rgb(90, 90, 90);
 }
 
+.color6 {
+  background-color: rgb(100, 100, 100);
+}
+
+.color7 {
+  background-color: rgb(110, 110, 110);
+}
+
+.color8 {
+  background-color: rgb(120, 120, 120);
+}
+
+.color9 {
+  background-color: rgb(130, 130, 130);
+}
+
+.color10 {
+  background-color: rgb(140, 140, 140);
+}
 .whiteb {
   background-color: white;
 }
