--- a/css/styles.css
+++ b/css/styles.css
@@ -111,24 +111,23 @@ main h1 {
 
 .middle {
   display: flex;
+  max-width: 95%;
   flex-wrap: wrap;
   margin: 0 auto;
-  min-height: 200px;
+  min-height: 800px;
   justify-items: space-around;
   border-radius: 5px;
 }
 
 .middlediv {
   display: grid;
-  min-height: 250px;
-  align-items: top;
+  min-height: 420px;
   border: 2px solid white;
   justify-content: space-around;
-  width: 30%;
-  margin: 10px;
+  width: 33%;
   border-radius: 3px;
   padding: 5px;
-  line-height: 2em;
+  line-height: 5em;
 }
 
 .middleauthor {
@@ -137,17 +136,13 @@ main h1 {
   text-decoration: none;
 }
 
-.break {
-  flex-basis: 100%;
-  width: 0;
-}
-
 .smashing {
-  max-width: 61.5%;
-  margin: 10px;
+  min-width: 66%;
+  margin: 0;
+  min-height: 450px;
   padding: 10px;
   border: 2px solid white;
-  line-height: 2em;
+  line-height: 5em;
   border-radius: 3px;
 }
 
@@ -159,17 +154,26 @@ main h1 {
 }
 
 #moretwitter {
-  margin: 10px auto;
+  margin: 5em auto;
 }
 
 .ethicalhandbook {
   width: 100%;
   min-height: 200px;
   text-align: center;
-  line-height: 2em;
+  line-height: 10em;
   margin: 1em auto;
 }
 
+.ethicalhandbook button {
+  line-height: 3em;
+}
+
+#hndpic {
+  min-height: 300px;
+  max-width: 50%;;
+  line-height: 20em;
+}
 .ethicalhandbook button {
   margin: 1em auto;
   width: 20%;
@@ -184,6 +188,13 @@ main h1 {
   justify-content: space-around;
 }
 
+#smashingtvbtn {
+  background-color: rgb(110,110,110);
+  border: 0;
+  border-radius: 2px;
+  width: 20%;
+  
+}
 .communitylinks .seelatest {
   margin: 1em auto;
   line-height: 7em;
@@ -300,7 +311,7 @@ footer ul li {
   display: grid;
   grid-template-areas: "a b";
   font-size: calc(0.35842vw + 0.95296em);
-  min-height: 120px;
+  min-height: 250px;
   width: 100%;
   margin: 0 auto;
   justify-items: center;
@@ -308,17 +319,18 @@ footer ul li {
 }
 
 .person_of_the_week div:first-child {
-  width: 20%;
+  width: 75%;
   height: 100%;
   grid-area: a;
-  margin-left: -10rem;
+  margin-left: -5rem;
+  line-height: 12rem;
 }
 
 .person_of_the_week div:nth-child(2) {
   grid-area: b;
   width: 100%;
   height: 100%;
-  line-height: 6rem;
+  line-height: 12rem;
   margin-right: 30%;
   align-items: center;
 }
@@ -386,19 +398,19 @@ Color scale: Color 1 is the most striking one (visually), color 2 less so and so
 }
 
 .color7 {
-  background-color: rgb(110, 110, 110);
+  background-color: rgb(115, 115, 115);
 }
 
 .color8 {
-  background-color: rgb(120, 120, 120);
+  background-color: rgb(135, 135, 135);
 }
 
 .color9 {
-  background-color: rgb(130, 130, 130);
+  background-color: rgb(150, 150, 150);
 }
 
 .color10 {
-  background-color: rgb(140, 140, 140);
+  background-color: rgb(170, 170, 170);
 }
 .whiteb {
   background-color: white;
